# AuroraLib

./: .travis.yml
src/: APIStructures.h  CMakeLists.txt  CommandConstruction.cpp  CommandHandling.cpp  CommandHandling.h  Conversions.h  SystemCRC.cpp  serialCommunicator.cpp  serialCommunicator.h  serialThread.cpp  serialThread.h
